@@ -1,3 +1,7 @@
+2006-05-17  Jon A. Cruz  <jon@joncruz.org>
+	* src/dialogs/layers-panel.cpp, src/dialogs/layers-panel.h:
+	  Switched icons to stock generic.
+
 2006-05-17  Michael Wybrow  <mjwybrow@users.sourceforge.net>
 
 	* src/dialogs/layers-panel.cpp: Compile fix from Mathieu Dimanche.
